--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,16 @@
+#lo siguiente sirve para crear todas las tablasnecesarias en la base de datos
+jdbc.driver=com.mysql.jdbc.Driver
+
 spring.datasource.url=jdbc:mysql://localhost:3306/libreria
-spring.datasource.username=user
-spring.datasource.password=1234
+
+spring.datasource.username=root
+spring.datasource.password=
+
+#spring.jpa.hibernate.use-new-id-generator-mappings=false
+#spring.datasource.driver.class=com.mysql.jdbc.Driver
+# drop n create table, good for testing, comment this in production
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+#spring.jpa.show-sql=true
+server.port = 8080
+
