--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,17 +9,12 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.show-sql=true
 
-##
+## son para crear las tablas 
 
-spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-
-#spring.jpa.hibernate.use-new-id-generator-mappings=false
-#spring.datasource.driver.class=com.mysql.jdbc.Driver
-# drop n create table, good for testing, comment this in production
-#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.generate-ddl=true
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
-#spring.jpa.show-sql=true
+
+
 server.port = 8080
 
