--- a/ANGULAR/libreriafront/package.json
+++ b/ANGULAR/libreriafront/package.json
@@ -20,9 +20,11 @@
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
     "@popperjs/core": "^2.8.6",
+    "@sweetalert2/ngx-sweetalert2": "^9.0.0",
     "bootstrap": "^4.6.0",
     "jquery": "^3.5.1",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^10.15.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
   },
