--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,19 @@
 #lo siguiente sirve para crear todas las tablasnecesarias en la base de datos
 spring.jpa.database=mysql
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/db
 
-
-
-spring.datasource.url=jdbc:mysql://localhost:3306/libreria
-
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=user
+spring.datasource.password=password
 spring.jpa.show-sql=true
-
-## son para crear las tablas 
-
-#spring.jpa.generate-ddl=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.hibernate.ddl-auto=update
-#spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+## son para crear las tablas
+
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
 
-server.port = 8080
+server.port =8181
 
