--- a/ANGULAR/libreriafront/angular.json
+++ b/ANGULAR/libreriafront/angular.json
@@ -6,7 +6,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "libreriafront": {
+    "bancofront": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:application": {
@@ -20,7 +20,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/libreriafront",
+            "outputPath": "dist/bancofront",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -73,18 +73,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "libreriafront:build"
+            "browserTarget": "bancofront:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "libreriafront:build:production"
+              "browserTarget": "bancofront:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "libreriafront:build"
+            "browserTarget": "bancofront:build"
           }
         },
         "test": {
@@ -121,16 +121,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "libreriafront:serve"
+            "devServerTarget": "bancofront:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "libreriafront:serve:production"
+              "devServerTarget": "bancofront:serve:production"
             }
           }
         }
       }
     }
   },
-  "defaultProject": "libreriafront"
+  "defaultProject": "bancofront"
 }
